# zshrs-git-fuzzy

./: Cargo.toml  LICENSE  README.md  znative.toml
docs/: index.md
src/: lib.rs
