[package]
name = "git_fuzzy"
version = "0.1.1"
edition = "2021"
publish = false
description = "Native zshrs plugin porting git-fuzzy status (self-reentrant fzf UI)"
authors = ["MenkeTechnologies"]
repository = "https://github.com/MenkeTechnologies/zshrs-git-fuzzy"
homepage = "https://github.com/MenkeTechnologies/zshrs-git-fuzzy"

[lib]
name = "git_fuzzy"
crate-type = ["cdylib", "rlib"]

[dependencies]
znative = "0.12"
